16-06-26 (18:51) [opencode] tooltip z-index 30000, fix .help sotto menu-box, aggiornato AGENTS.md

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -97,6 +97,7 @@ textarea,
       left: 1vw;
       font-size: @fsize-out;
       font-weight: 900;
+      z-index: 200;
     }
     .upload {
       left: 5vw;
