--- a/static/less/tooltip.less
+++ b/static/less/tooltip.less
@@ -40,7 +40,7 @@
     position: absolute;
     opacity: 0;
     pointer-events: none;
-    z-index: 9999;
+    z-index: 30000;
     transition: @tt-transition;
   }
 
